--- a/webapp-react/src/index.css
+++ b/webapp-react/src/index.css
@@ -6,3 +6,36 @@ body {
 h1, h2, h3, h4, h5, h6 {
     color: orange;
 }
+
+.card-movie {
+    height: 600px;
+    object-fit: cover;
+    border: 2px solid blue;
+    position: relative;
+}
+
+.cover-movie-card {
+    max-width: 100%;
+    height: 100%;
+}
+
+.overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    padding: 20px;
+    background-color:  rgb(0, 0, 85);
+    color: white;
+    opacity: 0;
+    transition: 0.3s;
+}
+
+.card-movie:hover .overlay {
+    opacity: 0.75;
+}
+
+.overlay h2 {
+    color: white;
+}
