--- a/webapp-react/src/index.css
+++ b/webapp-react/src/index.css
@@ -30,6 +30,10 @@ h1, h2, h3, h4, h5, h6 {
     color: white;
     opacity: 0;
     transition: 0.3s;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 }
 
 .card-movie:hover .overlay {
