--- a/webapp-react/src/index.css
+++ b/webapp-react/src/index.css
@@ -96,3 +96,19 @@ h6 {
   background-color: white;
   color: rgb(0, 0, 85);
 }
+
+.reviews {
+  margin-bottom: 50px;
+}
+
+.review-card {
+  border: 2px solid rgb(0, 0, 85);
+  background-color: rgb(0, 0, 85);
+  padding: 25px;
+  border-radius: 25px;
+  margin: 20px 0px;
+}
+
+.review-card > *{
+  color: white;
+}
