--- a/webapp-react/src/index.css
+++ b/webapp-react/src/index.css
@@ -112,3 +112,16 @@ h6 {
 .review-card > *{
   color: white;
 }
+
+.btn-main {
+  background-color: rgb(0, 0, 85);
+  color: white;
+  padding: 25px 15px;
+  font-size: 18px;
+  text-decoration: none;
+  transition: 0.3s;
+}
+
+.btn-main:hover {
+  background-color: rgb(0, 0, 41);
+}
