--- a/webapp-react/src/index.css
+++ b/webapp-react/src/index.css
@@ -125,3 +125,22 @@ h6 {
 .btn-main:hover {
   background-color: rgb(0, 0, 41);
 }
+
+.buttons {
+  display: flex;
+  justify-content: space-between;
+}
+
+.prv-btn, .succ-btn {
+  padding: 15px;
+  font-size: 18px;
+  background-color: white;
+  border: 2px solid  rgb(0, 0, 41);
+  color: rgb(0, 0, 85);
+  transition: 0.3s;
+}
+
+.prv-btn:hover, .succ-btn:hover {
+  background-color:rgb(0, 0, 41);
+  color: white;
+}
