--- a/webapp-react/src/index.css
+++ b/webapp-react/src/index.css
@@ -1,5 +1,22 @@
 body {
   font-family: Archivio, sans-serif;
+  height: 100vh;
+  margin: 0;
+  background: linear-gradient(-45deg, #ff3737, #feba26, #008662, #0b79ff);
+  background-size: 400% 400%;
+  animation: gradientAnimation 12s ease infinite;
+}
+
+@keyframes gradientAnimation {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
 }
 
 h1,
@@ -109,7 +126,7 @@ h6 {
   margin: 20px 0px;
 }
 
-.review-card > *{
+.review-card > * {
   color: white;
 }
 
@@ -131,16 +148,28 @@ h6 {
   justify-content: space-between;
 }
 
-.prv-btn, .succ-btn {
+.prv-btn,
+.succ-btn {
   padding: 15px;
   font-size: 18px;
   background-color: white;
-  border: 2px solid  rgb(0, 0, 41);
+  border: 2px solid rgb(0, 0, 41);
   color: rgb(0, 0, 85);
   transition: 0.3s;
 }
 
-.prv-btn:hover, .succ-btn:hover {
-  background-color:rgb(0, 0, 41);
+.prv-btn:hover,
+.succ-btn:hover {
+  background-color: rgb(0, 0, 41);
   color: white;
+}
+
+.lista-libri h1 {
+  color: blue;
+  font-weight: bold;
+}
+
+.rec-color h2 {
+  color: blue;
+  font-weight: bold;
 }
