--- a/webapp-react/src/index.css
+++ b/webapp-react/src/index.css
@@ -24,7 +24,8 @@ h2,
 h3,
 h4,
 h5,
-h6 {
+h6,
+.text-main {
   color: orange;
 }
 
@@ -172,4 +173,23 @@ h6 {
 .rec-color h2 {
   color: blue;
   font-weight: bold;
+}
+
+.overlay-loader {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(255, 255, 255, 0.5);
+  z-index: 100;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.spinner-border {
+  width: 200px;
+  height: 200px;
+  font-size: 40px;
 }
